--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you: 
+# If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
@@ -21,12 +21,12 @@
 title: C0MPUTE
 email: adhikaridayamoy@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A blog about technology that I like,use and will use. 
+  A blog about technology that I like,use and will use.
 baseurl: "/compute" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Damercysiyzarc
 github_username:  Damercy
-
+future: true
 # Build settings
 theme: minima
 plugins:
